# Project-2

./: Automaton.h  CMakeLists.txt  ColonDashAutomaton.cpp  CommaAutomaton.cpp  CommentAutomaton.cpp  CommentAutomaton.h  Database.cpp  Database.h  DatalogProgram.cpp  DatalogProgram.h  Graph.cpp  Graph.h  Header.cpp  Header.h  IDAutomaton.cpp  Interpreter.cpp  Interpreter.h  Lexer.cpp  Lexer.h  Node.cpp  Node.h  Parameter.cpp  Parameter.h  Parser.cpp  Parser.h  Predicate.cpp  Predicate.h  Relation.cpp  Relation.h  Rule.cpp  Rule.h  StringAutomaton.cpp  Token.cpp  Token.h  Tuple.cpp  Tuple.h  UndefinedCommentAutomaton.cpp  UndefinedCommentAutomaton.h  UndefinedStringAutomaton.cpp  UndefinedStringAutomaton.h  (+1 more)
Lab3TestCases/: Lab3Test.txt
Lab5TestCases/: 5a.txt
TestCases/: ColonTest.txt
